added some contour plotting code (fixed existing code so now it works)

--- a/rv144-vs-hvtn702-lib.Rmd
+++ b/rv144-vs-hvtn702-lib.Rmd
@@ -980,43 +980,58 @@ if( FALSE ) {
     fit <- the.sim$fit
     bounds <- the.sim$bounds;
     
+    # Contour plotting
+    fit.dist <-
+        calculate.abc.dist( fit$stats, as.numeric( target.stats ), ifelse( is.na( fit$stats_normalization ), 1, fit$stats_normalization ) * target.stat.scale.units );
+
+    dist.units <- quantile( fit.dist, probs = 0.025 ) # top 2.5%
+    dist.units.for.contour.plot <- 1.0; # Show all the data within 1 unit (so, the top 2.5%).
+    fit.dist.scaled <- fit.dist / dist.units;
+    
+    abc.keep.sim <- fit.dist.scaled < dist.units.for.contour.plot;
+    fit.filtered <- fit;
+    fit.filtered$param <- fit$param[ abc.keep.sim, , drop = FALSE ];
+    fit.filtered$stats <- fit$stats[ abc.keep.sim, , drop = FALSE ];
+    fit.filtered$weights <- fit$weights[ abc.keep.sim ];
+    fit.filtered.dist <- fit.dist[ abc.keep.sim ];
+
     # These are the original bounds, separated for use in optim:
     lower.bounds <- sapply( bounds, function ( .bounds.for.x ) { .bounds.for.x[ 1 ] } );
     upper.bounds <- sapply( bounds, function ( .bounds.for.x ) { .bounds.for.x[ 2 ] } );
 
-    plot(density(fit$param[, 1], from = lower.bounds[1],  to = upper.bounds[1]),
+    plot(density(fit.filtered$param[, 1], from = lower.bounds[1],  to = upper.bounds[1]),
          main = "epsilon", 
          xlim = c(lower.bounds[1], upper.bounds[1]),
          #ylim = c(0, 10),
          col=2)
-    lines(density(fit$param[, 1], from = lower.bounds[1],  to = upper.bounds[1]), col = 2)
+    lines(density(fit.filtered$param[, 1], from = lower.bounds[1],  to = upper.bounds[1]), col = 2)
     abline(v = VE.target, lty = 2, col = 1)
     legend("topright", legend = c("per-contact VE", "Posterior"),
            lty = c(1, 2), col = 1:2, lwd = 2)
     
-    plot(density(fit$param[, 2], from = lower.bounds[2],  to = upper.bounds[2]),
+    plot(density(fit.filtered$param[, 2], from = lower.bounds[2],  to = upper.bounds[2]),
          main = "log10lambda", 
          xlim = c(lower.bounds[2], upper.bounds[2]),
          col=2)
-    lines(density(fit$param[, 2], from = lower.bounds[2],  to = upper.bounds[2]), col = 2)
+    lines(density(fit.filtered$param[, 2], from = lower.bounds[2],  to = upper.bounds[2]), col = 2)
     #abline(v = VE.target, lty = 2, col = 1) # This is a bug, it plots VE target, not lambda
     legend("topright", legend = c("Truth", "Posterior"),
            lty = c(1, 2), col = 1:2, lwd = 2)
     
-    plot(density(fit$param[, 3], from = lower.bounds[3],  to = upper.bounds[3]),
+    plot(density(fit.filtered$param[, 3], from = lower.bounds[3],  to = upper.bounds[3]),
          main = "risk", 
          xlim = c(lower.bounds[3], upper.bounds[3]),
          col=2)
-    lines(density(fit$param[, 3], from = lower.bounds[3],  to = upper.bounds[3]), col = 2)
+    lines(density(fit.filtered$param[, 3], from = lower.bounds[3],  to = upper.bounds[3]), col = 2)
     #abline(v = VE.target, lty = 2, col = 1) # Another bug
     legend("topright", legend = c("Truth", "Posterior"),
            lty = c(1, 2), col = 1:2, lwd = 2)
     
-    .df <- as.data.frame( fit$param ) #df of just the parameter combinations ABC sampled
+    .df <- as.data.frame( fit.filtered$param ) #df of just the parameter combinations ABC sampled
     names( .df ) <- c( "epsilon", "log10lambda", "risk" )
     pdf( "log10lambda_risk.pdf" ); ggplot( .df, aes( x=log10lambda,y=risk ) ) + geom_point() + stat_density2d_filled(); dev.off()
     pdf( "epsilon_risk.pdf" ); ggplot( .df, aes( x=epsilon,y=risk ) ) + geom_point() + stat_density2d_filled(); dev.off()
     pdf( "epsilon_log10lambda.pdf" ); ggplot( .df, aes( x=epsilon,y=log10lambda ) ) + geom_point() + stat_density2d_filled(); dev.off()
-} # END IF FALSE
+}
 ```
 
